// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation drawer component Navigation drawer renders correctly when closed 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className="NavigationDrawer-drawer-1"
  classes={
    Object {
      "paper": "NavigationDrawer-drawerPaper-2",
    }
  }
  open={false}
  variant="persistent"
>
  <div
    className="NavigationDrawer-drawerHeader-3"
  >
    <WithStyles(ForwardRef(IconButton))
      aria-label="Dropdown Menu"
      onClick={[Function]}
    >
      <ChevronLeftIcon />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(List)) />
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Navigation drawer component Navigation drawer renders correctly when open 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className="NavigationDrawer-drawer-1"
  classes={
    Object {
      "paper": "NavigationDrawer-drawerPaper-2",
    }
  }
  open={true}
  variant="persistent"
>
  <div
    className="NavigationDrawer-drawerHeader-3"
  >
    <WithStyles(ForwardRef(IconButton))
      aria-label="Dropdown Menu"
      onClick={[Function]}
    >
      <ChevronLeftIcon />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(List)) />
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Navigation drawer component renders a plugin list grouped by sections ordered alphabetically when open 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className="NavigationDrawer-drawer-1"
  classes={
    Object {
      "paper": "NavigationDrawer-drawerPaper-2",
    }
  }
  open={true}
  variant="persistent"
>
  <div
    className="NavigationDrawer-drawerHeader-3"
  >
    <WithStyles(ForwardRef(IconButton))
      aria-label="Dropdown Menu"
      onClick={[Function]}
    >
      <ChevronLeftIcon />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(List))>
    <WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItemText))
        classes={
          Object {
            "primary": "NavigationDrawer-sectionTitle-4",
          }
        }
        primary="ANALYSIS"
        primaryTypographyProps={
          Object {
            "variant": "h6",
          }
        }
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(List))
      component="nav"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-link"
        key="0"
        to="link"
      >
        <img
          className="NavigationDrawer-menuLogo-6"
        />
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-5",
            }
          }
          primary="analysis-plugin"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-link"
        key="1"
        to="link"
      >
        <img
          className="NavigationDrawer-menuLogo-6"
        />
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-5",
            }
          }
          primary="analysis-plugin2"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
    </WithStyles(ForwardRef(List))>
    <WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItemText))
        classes={
          Object {
            "primary": "NavigationDrawer-sectionTitle-4",
          }
        }
        primary="DATA"
        primaryTypographyProps={
          Object {
            "variant": "h6",
          }
        }
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(List))
      component="nav"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-link"
        key="0"
        to="link"
      >
        <img
          className="NavigationDrawer-menuLogo-6"
        />
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-5",
            }
          }
          primary="data-plugin"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-link"
        key="1"
        to="link"
      >
        <img
          className="NavigationDrawer-menuLogo-6"
        />
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-5",
            }
          }
          primary="data-plugin1"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-link"
        key="2"
        to="link"
      >
        <img
          className="NavigationDrawer-menuLogo-6"
        />
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-5",
            }
          }
          primary="data-plugin2"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-plugin_link"
        key="3"
        to="plugin_link"
      >
        <img
          className="NavigationDrawer-menuLogo-6"
        />
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-5",
            }
          }
          primary="data-plugin-no-displayname"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
    </WithStyles(ForwardRef(List))>
  </WithStyles(ForwardRef(List))>
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Navigation drawer component renders a plugin list grouped by sections ordered alphabetically when open 2`] = `
<WithStyles(ForwardRef(ListItem))
  button={true}
  component={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ForwardRefLink",
      "render": [Function],
    }
  }
  id="plugin-link-plugin_link"
  key="3"
  to="plugin_link"
>
  <img
    className="NavigationDrawer-menuLogo-6"
  />
  <WithStyles(ForwardRef(ListItemText))
    classes={
      Object {
        "primary": "NavigationDrawer-menuItem-5",
      }
    }
    primary="data-plugin-no-displayname"
    primaryTypographyProps={
      Object {
        "variant": "subtitle1",
      }
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;
